# P_wireworld

./: .travis.yml  README  README.md  build.sh  build_cmake.sh  setup.sh
scripts/: clear_remote.sh  create_subtree.sh  create_subtrees.sh  merge_all_from_subtree.sh
sources/EXT_systemc/: .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/EXT_systemc/cmake/Modules/: FindSystemC.cmake
sources/EXT_systemc/src/: main_EXT_systemc.cpp
sources/EXT_xmlParser/: .travis.yml  CMakeLists.txt  README.md  README.txt  RELEASE_NOTES.txt  infra_infos.txt
sources/EXT_xmlParser/src/: main_EXT_xmlParser.cpp
sources/lib_bmp/: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/lib_bmp/include/: my_bmp.h  my_bmp_header.h  my_color.h  my_color_alpha.h  my_palette.h
sources/lib_bmp/src/: main_lib_bmp.cpp
sources/parameter_manager/: .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/parameter_manager/include/: parameter.h  parameter_if.h  parameter_manager.h
sources/parameter_manager/src/: main_parameter_manager.cpp
sources/quicky_exception/: .travis.yml  CMakeLists.txt  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/quicky_exception/include/: quicky_exception.h
sources/quicky_exception/src/: main_quicky_exception.cpp
sources/quicky_tools/: .gitignore  RELEASE_NOTES.txt
sources/quicky_tools/data/: Makefile.ref  sub_makefile.ref
sources/quicky_tools/setup/: setup.csh  setup.sh
sources/quicky_utils/: .travis.yml  CMakeLists.txt  README.md  README.txt  RELEASE_NOTES.txt  infra_infos.txt
sources/quicky_utils/include/: ansi_colors.h  ext_int.h  ext_uint.h  fract.h  password_input.h  quicky_C_io.h  quicky_bitfield.h  quicky_files.h  quicky_test.h  quicky_utils.h  safe_int.h  safe_type_exception.h  safe_types.h  safe_uint.h  signal_handler.h  signal_handler_listener_if.h  test_fract.h  type_string.h
sources/quicky_utils/src/: main_quicky_utils.cpp  quicky_test.cpp  signal_handler.cpp  test_ansi_colors.cpp  test_ext_types.cpp  test_safe_types.cpp  test_type_string.cpp  type_string.cpp
sources/simple_gui/: .travis.yml  CMakeLists.txt  README.md  README.txt  RELEASE_NOTES.txt  infra_infos.txt
sources/simple_gui/include/: auto_refresh_gui.h  simple_gui.h
sources/simple_gui/src/: main_simple_gui.cpp  simple_gui.cpp
sources/wireworld/: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/wireworld/doc/models/: A_and_not_B.txt  diode.txt  various_clocks.txt
sources/wireworld/doc/models/wireworld_computer/: wire_computer.txt
sources/wireworld/include/: cell.h  wireworld.h
sources/wireworld/src/: main.cpp  wireworld.cpp
sources/wireworld_common/: .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/wireworld_common/include/: wireworld_analyzer.h  wireworld_config_parser.h  wireworld_configuration.h  wireworld_generic_configuration.h  wireworld_generic_item.h  wireworld_generic_parser.h  wireworld_gui.h  wireworld_parameters.h  wireworld_parser.h  wireworld_prepare.h  wireworld_types.h
sources/wireworld_common/src/: wireworld_types.cpp
sources/wireworld_computer/: .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/wireworld_computer/doc/: schematics.odp
sources/wireworld_computer/doc/models/: README.txt  wireworld_computer.conf  wireworld_computer.txt  wireworld_computer.xml
sources/wireworld_computer/doc/models/parts/: data_latch.txt
sources/wireworld_computer/doc/models/parts/BCD/: BCD.txt  bottom_megaloop_content.txt  carry_loop.txt  demultiplexer_control_loop.txt  mega_loop.txt  mega_loop_period.txt  standalone_BCD.txt
sources/wireworld_computer/doc/models/parts/clock/: clock_line.txt  injector.txt
sources/wireworld_computer/doc/models/parts/clock/clock_divider/: clock_divider.circ  divider_loop.txt
sources/wireworld_computer/doc/models/parts/digit_display/: digit_display.circ  digit_display.conf  digit_display.txt  digit_display_generic.xml  rom.circ  rom_controler.txt
sources/wireworld_computer/doc/models/parts/registers/: README.txt  controls.conf  controls.txt  controls.xml  registers_and_control.txt  registers_and_control_init.txt  registers_logic.txt
sources/wireworld_computer/doc/program/: boot.asm  check_adder.asm  my_prime.asm  prime_computation.asm  simple_loop.asm  square_loop.asm
sources/wireworld_computer/include/: bitwise_and_not_register.h  conditional_register.h  display_register.h  not_register.h  program_parser.h  register_if.h  register_information.h  return_zero_register.h  rotate_left_register.h  rotate_right_register.h  simple_register.h  sum_operand_register.h  sum_register.h  wireworld_computer.h  wireworld_computer_utils.h
sources/wireworld_computer/src/: main.cpp  sum_operand_register.cpp  wireworld_computer.cpp
sources/wireworld_computer/utils/: generic_registers.cpp
sources/wireworld_systemc/: .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/wireworld_systemc/include/: cell.h  cell_base.h  cell_factory.h  top.h  wireworld.h
sources/wireworld_systemc/src/: main.cpp
sources/wireworld_tool/: .travis.yml  CMakeLists.txt  README  README.md  RELEASE_NOTES.txt  infra_infos.txt
sources/wireworld_tool/include/: empty.h
sources/wireworld_tool/src/: main.cpp
